--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.1.3",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
+    "@angular/material": "^2.0.0-beta.6",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-materialize": "^15.0.4",
     "core-js": "^2.4.1",
+    "firebase": "^4.0.0",
+    "materialize-css": "^0.98.2",
     "rxjs": "^5.1.0",
+    "select2": "^4.0.3",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
